# reachy2-sdk-audio-server-rs

./: .gitattributes  .gitmodules  Cargo.toml  README.md
.github/workflows/: tests.yml
audio_server/: Cargo.toml
audio_server/src/: main.rs
audio_server/src/gstreamer/: gst_player.rs  gst_recorder.rs  gst_utils.rs  lib.rs  mod.rs
audio_server/tests/: grpc.rs  grpc_gst.rs  record_replay.rs
data/: LICENSE
reachy-api/: Cargo.toml  build.rs
reachy-api/src/: lib.rs
src/: main.rs
src/gstreamer/: gst_recorder.rs
tests/: record_replay.rs
